--- a/Jestimate1.ipynb
+++ b/Jestimate1.ipynb
@@ -28,7 +28,7 @@
       "metadata": {
         "id": "9oXi5disofZQ",
         "colab_type": "code",
-        "outputId": "6e9b0714-87f8-4bf0-f8ac-f5e5f468711c",
+        "outputId": "6428e5f2-4173-4df3-cda7-86f83ddffe89",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -37,7 +37,7 @@
       "source": [
         "import pandas as pd\n",
         "\n",
-        "from bokeh.models import ColumnDataSource, TableColumn, DataTable\n",
+        "from bokeh.models import ColumnDataSource, TableColumn, DataTable, CDSView, GroupFilter\n",
         "from bokeh.layouts import column\n",
         "from bokeh.models.widgets import TextInput\n",
         "from bokeh.plotting import curdoc\n",
@@ -45,7 +45,7 @@
         "data = pd.read_csv('https://raw.githubusercontent.com/JimKing100/Jestimate/master/data/display_data.csv')\n",
         "data.head()"
       ],
-      "execution_count": 22,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -141,7 +141,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 22
+          "execution_count": 30
         }
       ]
     },
@@ -154,14 +154,16 @@
       },
       "source": [
         "source = ColumnDataSource(data)\n",
+        "hood = '1 - Outer Richmond'\n",
+        "view1 = CDSView(source=source, filters=[GroupFilter(column_name='neighborhood', group=hood)])\n",
         "\n",
-        "columns = [TableColumn(field = \"full_address\", title = \"Address\")]\n",
+        "columns = [TableColumn(field = 'full_address', title = 'Address')]\n",
         "\n",
-        "data_table = DataTable(source = source, columns = columns, width = 280, height = 280, editable = False)\n",
-        "table_address = TextInput(value = '', title = \"Address\")\n",
-        "table_actual = TextInput(value = '', title = \"Actual Sale Price\")\n",
-        "table_predicted = TextInput(value = '', title = \"Predicted Sale Price\")\n",
-        "table_diff = TextInput(value = '', title = \"Difference\")\n",
+        "data_table = DataTable(source = source, view = view1, columns = columns, width = 280, height = 280, editable = False)\n",
+        "table_address = TextInput(value = '', title = 'Address')\n",
+        "table_actual = TextInput(value = '', title = 'Actual Sale Price')\n",
+        "table_predicted = TextInput(value = '', title = 'Predicted Sale Price')\n",
+        "table_diff = TextInput(value = '', title = 'Difference')\n",
         "\n",
         "def function_source(attr, old, new):\n",
         "    try:\n",
