--- a/SF_Map_Code.ipynb
+++ b/SF_Map_Code.ipynb
@@ -87,8 +87,9 @@
         "from bokeh.palettes import brewer\n",
         "\n",
         "from bokeh.io.doc import curdoc\n",
-        "from bokeh.models import Slider, HoverTool, Select\n",
-        "from bokeh.layouts import widgetbox, row, column"
+        "from bokeh.models import Slider, HoverTool, Select, TapTool, CustomJS\n",
+        "from bokeh.layouts import widgetbox, row, column\n",
+        "from bokeh.models.widgets import TextInput"
       ],
       "execution_count": 0,
       "outputs": []
@@ -108,7 +109,7 @@
       "metadata": {
         "id": "phiWezPIXgwY",
         "colab_type": "code",
-        "outputId": "55216a8e-bc85-4bf2-9a80-4accfebd126e",
+        "outputId": "bf2fd8ee-5e69-416c-c51d-cbf6510c7f59",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 411
@@ -126,7 +127,7 @@
         "print(temp_data.shape)\n",
         "temp_data.head(5)"
       ],
-      "execution_count": 0,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -373,7 +374,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 19
+          "execution_count": 41
         }
       ]
     },
@@ -429,10 +430,10 @@
       "metadata": {
         "id": "95329Bbiac-B",
         "colab_type": "code",
-        "outputId": "f4529151-9878-41f0-929f-e42f547518c7",
+        "outputId": "b8c832de-faec-47e2-e283-b36fc6cdc816",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 414
+          "height": 394
         }
       },
       "source": [
@@ -444,7 +445,7 @@
         "sf_data['price_sf'] = sf_data['sale_price'] / sf_data['sf']\n",
         "sf_data.head(5)"
       ],
-      "execution_count": 0,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -696,7 +697,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 22
+          "execution_count": 44
         }
       ]
     },
@@ -715,10 +716,10 @@
       "metadata": {
         "id": "udbf0vBgz-P6",
         "colab_type": "code",
-        "outputId": "8362ef60-e470-48c9-e6d8-044c2bffc82b",
+        "outputId": "31c8900c-65d3-4015-c686-937bbd229ed7",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 204
+          "height": 224
         }
       },
       "source": [
@@ -774,7 +775,7 @@
         "\n",
         "neighborhood_data.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -882,7 +883,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 23
+          "execution_count": 45
         }
       ]
     },
@@ -901,7 +902,7 @@
       "metadata": {
         "id": "0E4eFxilb0N3",
         "colab_type": "code",
-        "outputId": "ff8cde01-8e3a-4c01-d6ab-f4e220e7cb98",
+        "outputId": "ec40f910-c695-41ed-ae11-6b8c19d74153",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -927,7 +928,7 @@
         "sf.sort_values(by=['subdist_no'])\n",
         "sf.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -963,35 +964,35 @@
               "      <td>Alamo Square</td>\n",
               "      <td>6e</td>\n",
               "      <td>District 6 - Central North</td>\n",
-              "      <td>(POLYGON ((-122.4294839489174 37.7750962307043...</td>\n",
+              "      <td>MULTIPOLYGON (((-122.42948 37.77510, -122.4310...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>Anza Vista</td>\n",
               "      <td>6a</td>\n",
               "      <td>District 6 - Central North</td>\n",
-              "      <td>(POLYGON ((-122.4474643913587 37.7798633530923...</td>\n",
+              "      <td>MULTIPOLYGON (((-122.44746 37.77986, -122.4473...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>Balboa Terrace</td>\n",
               "      <td>4a</td>\n",
               "      <td>District 4 - Twin Peaks West</td>\n",
-              "      <td>(POLYGON ((-122.464508862148 37.73220849554402...</td>\n",
+              "      <td>MULTIPOLYGON (((-122.46451 37.73221, -122.4650...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
               "      <td>Bayview</td>\n",
               "      <td>10a</td>\n",
               "      <td>District 10 - Southeast</td>\n",
-              "      <td>(POLYGON ((-122.38758527039 37.7502633777501, ...</td>\n",
+              "      <td>MULTIPOLYGON (((-122.38759 37.75026, -122.3874...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
               "      <td>Bernal Heights</td>\n",
               "      <td>9a</td>\n",
               "      <td>District 9 - Central East</td>\n",
-              "      <td>(POLYGON ((-122.4037549223623 37.7491900637356...</td>\n",
+              "      <td>MULTIPOLYGON (((-122.40375 37.74919, -122.4046...</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -999,11 +1000,11 @@
             ],
             "text/plain": [
               "  neighborhood_name  ...                                           geometry\n",
-              "0      Alamo Square  ...  (POLYGON ((-122.4294839489174 37.7750962307043...\n",
-              "1        Anza Vista  ...  (POLYGON ((-122.4474643913587 37.7798633530923...\n",
-              "2    Balboa Terrace  ...  (POLYGON ((-122.464508862148 37.73220849554402...\n",
-              "3           Bayview  ...  (POLYGON ((-122.38758527039 37.7502633777501, ...\n",
-              "4    Bernal Heights  ...  (POLYGON ((-122.4037549223623 37.7491900637356...\n",
+              "0      Alamo Square  ...  MULTIPOLYGON (((-122.42948 37.77510, -122.4310...\n",
+              "1        Anza Vista  ...  MULTIPOLYGON (((-122.44746 37.77986, -122.4473...\n",
+              "2    Balboa Terrace  ...  MULTIPOLYGON (((-122.46451 37.73221, -122.4650...\n",
+              "3           Bayview  ...  MULTIPOLYGON (((-122.38759 37.75026, -122.3874...\n",
+              "4    Bernal Heights  ...  MULTIPOLYGON (((-122.40375 37.74919, -122.4046...\n",
               "\n",
               "[5 rows x 4 columns]"
             ]
@@ -1011,7 +1012,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 24
+          "execution_count": 46
         }
       ]
     },
@@ -1030,7 +1031,7 @@
       "metadata": {
         "id": "oDyuHAL19y5W",
         "colab_type": "code",
-        "outputId": "751760bb-0f48-4edb-d7d7-916cfedfcc33",
+        "outputId": "5fd26a5b-e5c1-4990-a605-2c8c399c0f3d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 235
@@ -1050,7 +1051,7 @@
         "format_df = pd.DataFrame(format_data, columns = ['field' , 'min_range', 'max_range' , 'format', 'verbage'])\n",
         "format_df.head(10)"
       ],
-      "execution_count": 0,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1149,7 +1150,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 25
+          "execution_count": 47
         }
       ]
     },
@@ -1248,14 +1249,14 @@
         "  p.add_layout(color_bar, 'right')\n",
         "\n",
         "  # Add the hover tool to the graph\n",
-        "  p.add_tools(hover)\n",
+        "  p.add_tools(tap)\n",
         "  return p\n",
         "    \n",
         "    \n",
         "# Input geojson source that contains features for plotting for:\n",
         "# initial year 2018 and initial criteria sale_price_median\n",
         "geosource = GeoJSONDataSource(geojson = json_data(2018))\n",
-        "input_field = 'sale_price_median'\n",
+        "input_field = 'sale_price_mean'\n",
         "\n",
         "# Define a sequential multi-hue color palette.\n",
         "palette = brewer['Blues'][8]\n",
@@ -1263,31 +1264,40 @@
         "# Reverse color order so that dark blue is highest obesity.\n",
         "palette = palette[::-1]\n",
         "\n",
-        "# Add hover tool\n",
-        "hover = HoverTool(tooltips = [ ('Neighborhood','@neighborhood_name'),\n",
-        "                               ('# Sales', '@sale_price_count'),\n",
-        "                               ('Average Price', '$@sale_price_mean{,}'),\n",
-        "                               ('Median Price', '$@sale_price_median{,}'),\n",
-        "                               ('Average SF', '@sf_mean{,}'),\n",
-        "                               ('Price/SF ', '$@price_sf_mean{,}'),\n",
-        "                               ('Income Needed', '$@min_income{,}')])\n",
+        "callback = CustomJS(args=dict(source=geosource), code=\"\"\"\n",
+        "    x = cb_data.geometries['x']\n",
+        "    y = cb_data.geometries['y']\n",
+        "    console.log(x)\n",
+        "    console.log(y)\n",
+        "\"\"\")\n",
+        "#console.log(cb_data.index['1d'].indices);\n",
+        "#console.log(cb_data.geometry['x'])   \n",
+        "#source.change.emit();\n",
+        "#console.log(cb_data.geometries['x']) \n",
+        "#console.log(cb_data.geometries['y']) \n",
+        "\n",
+        "#x = cb_data.geometries['x'] \n",
+        "\n",
+        "#Add hover tool\n",
+        "tap = TapTool(callback=callback)\n",
+        "tap_neighborhood = TextInput(value = '', title = 'Neighborhood')\n",
         "\n",
         "# Call the plotting function\n",
         "p = make_plot(input_field)\n",
         "\n",
         "# Make a slider object: slider \n",
-        "slider = Slider(title = 'Year',start = 2009, end = 2018, step = 1, value = 2018)\n",
-        "slider.on_change('value', update_plot)\n",
+        "#slider = Slider(title = 'Year',start = 2009, end = 2018, step = 1, value = 2018)\n",
+        "#slider.on_change('value', update_plot)\n",
         "\n",
         "# Make a selection object: select\n",
-        "select = Select(title='Select Criteria:', value='Median Sales Price', options=['Median Sales Price', 'Minimum Income Required',\n",
-        "                                                                               'Average Sales Price', 'Average Price Per Square Foot',\n",
-        "                                                                               'Average Square Footage', 'Number of Sales'])\n",
-        "select.on_change('value', update_plot)\n",
+        "#select = Select(title='Select Criteria:', value='Median Sales Price', options=['Median Sales Price', 'Minimum Income Required',\n",
+        "#                                                                               'Average Sales Price', 'Average Price Per Square Foot',\n",
+        "#                                                                               'Average Square Footage', 'Number of Sales'])\n",
+        "#select.on_change('value', update_plot)\n",
         "\n",
         "# Make a column layout of widgetbox(slider) and plot, and add it to the current document\n",
         "# Display the current document\n",
-        "layout = column(p, widgetbox(select), widgetbox(slider))\n",
+        "layout = column(p, tap_neighborhood)\n",
         "curdoc().add_root(layout)\n",
         "\n",
         "# Use the following code to test in a notebook\n",
