--- a/SF_Map_Code.ipynb
+++ b/SF_Map_Code.ipynb
@@ -38,7 +38,11 @@
       "metadata": {
         "id": "rNJMgPVwfJ9g",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 360
+        },
+        "outputId": "cc721812-b497-450a-a901-7ebafc432d11"
       },
       "source": [
         "# Install fiona - need to comment out for transfer to live site.\n",
@@ -46,15 +50,45 @@
         "#%%capture\n",
         "#!pip install fiona"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Collecting fiona\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/1e/cf/a1f22d87223cb4f48beecf4de6eb59e5261a7d0d073489bbe7cfe6514ae3/Fiona-1.8.8-1-cp36-cp36m-manylinux1_x86_64.whl (11.9MB)\n",
+            "\u001b[K     |████████████████████████████████| 11.9MB 4.3MB/s \n",
+            "\u001b[?25hRequirement already satisfied: attrs>=17 in /usr/local/lib/python3.6/dist-packages (from fiona) (19.1.0)\n",
+            "Requirement already satisfied: six>=1.7 in /usr/local/lib/python3.6/dist-packages (from fiona) (1.12.0)\n",
+            "Collecting click-plugins>=1.0 (from fiona)\n",
+            "  Downloading https://files.pythonhosted.org/packages/e9/da/824b92d9942f4e472702488857914bdd50f73021efea15b4cad9aca8ecef/click_plugins-1.1.1-py2.py3-none-any.whl\n",
+            "Collecting cligj>=0.5 (from fiona)\n",
+            "  Downloading https://files.pythonhosted.org/packages/e4/be/30a58b4b0733850280d01f8bd132591b4668ed5c7046761098d665ac2174/cligj-0.5.0-py3-none-any.whl\n",
+            "Collecting munch (from fiona)\n",
+            "  Downloading https://files.pythonhosted.org/packages/68/f4/260ec98ea840757a0da09e0ed8135333d59b8dfebe9752a365b04857660a/munch-2.3.2.tar.gz\n",
+            "Requirement already satisfied: click<8,>=4.0 in /usr/local/lib/python3.6/dist-packages (from fiona) (7.0)\n",
+            "Building wheels for collected packages: munch\n",
+            "  Building wheel for munch (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for munch: filename=munch-2.3.2-py2.py3-none-any.whl size=6614 sha256=ddbd9e3e2243063b2bed99f8abb13b6b750b61dd2c6443c489819a5e9ef597a6\n",
+            "  Stored in directory: /root/.cache/pip/wheels/db/bf/bc/06a3e1bfe0ab27d2e720ceb3cff3159398d92644c0cec2c125\n",
+            "Successfully built munch\n",
+            "Installing collected packages: click-plugins, cligj, munch, fiona\n",
+            "Successfully installed click-plugins-1.1.1 cligj-0.5.0 fiona-1.8.8 munch-2.3.2\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "JC5kTt_Zfb_s",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 377
+        },
+        "outputId": "52f8ef7b-f474-4c92-8f40-aadcc4441b05"
       },
       "source": [
         "# Install geopandas - need to comment out for tranfer to live site.\n",
@@ -62,8 +96,35 @@
         "#%%capture\n",
         "#!pip install geopandas"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Collecting geopandas\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/51/10/9b2f2f6e35cc0e427f43faf59c56931709996ad2ffe4440fda2f5c53554f/geopandas-0.6.0-py2.py3-none-any.whl (918kB)\n",
+            "\r\u001b[K     |▍                               | 10kB 15.5MB/s eta 0:00:01\r\u001b[K     |▊                               | 20kB 3.2MB/s eta 0:00:01\r\u001b[K     |█                               | 30kB 4.5MB/s eta 0:00:01\r\u001b[K     |█▍                              | 40kB 3.0MB/s eta 0:00:01\r\u001b[K     |█▉                              | 51kB 3.7MB/s eta 0:00:01\r\u001b[K     |██▏                             | 61kB 4.4MB/s eta 0:00:01\r\u001b[K     |██▌                             | 71kB 5.0MB/s eta 0:00:01\r\u001b[K     |██▉                             | 81kB 5.7MB/s eta 0:00:01\r\u001b[K     |███▏                            | 92kB 6.4MB/s eta 0:00:01\r\u001b[K     |███▋                            | 102kB 4.9MB/s eta 0:00:01\r\u001b[K     |████                            | 112kB 4.9MB/s eta 0:00:01\r\u001b[K     |████▎                           | 122kB 4.9MB/s eta 0:00:01\r\u001b[K     |████▋                           | 133kB 4.9MB/s eta 0:00:01\r\u001b[K     |█████                           | 143kB 4.9MB/s eta 0:00:01\r\u001b[K     |█████▍                          | 153kB 4.9MB/s eta 0:00:01\r\u001b[K     |█████▊                          | 163kB 4.9MB/s eta 0:00:01\r\u001b[K     |██████                          | 174kB 4.9MB/s eta 0:00:01\r\u001b[K     |██████▍                         | 184kB 4.9MB/s eta 0:00:01\r\u001b[K     |██████▉                         | 194kB 4.9MB/s eta 0:00:01\r\u001b[K     |███████▏                        | 204kB 4.9MB/s eta 0:00:01\r\u001b[K     |███████▌                        | 215kB 4.9MB/s eta 0:00:01\r\u001b[K     |███████▉                        | 225kB 4.9MB/s eta 0:00:01\r\u001b[K     |████████▏                       | 235kB 4.9MB/s eta 0:00:01\r\u001b[K     |████████▋                       | 245kB 4.9MB/s eta 0:00:01\r\u001b[K     |█████████                       | 256kB 4.9MB/s eta 0:00:01\r\u001b[K     |█████████▎                      | 266kB 4.9MB/s eta 0:00:01\r\u001b[K     |█████████▋                      | 276kB 4.9MB/s eta 0:00:01\r\u001b[K     |██████████                      | 286kB 4.9MB/s eta 0:00:01\r\u001b[K     |██████████▍                     | 296kB 4.9MB/s eta 0:00:01\r\u001b[K     |██████████▊                     | 307kB 4.9MB/s eta 0:00:01\r\u001b[K     |███████████                     | 317kB 4.9MB/s eta 0:00:01\r\u001b[K     |███████████▍                    | 327kB 4.9MB/s eta 0:00:01\r\u001b[K     |███████████▊                    | 337kB 4.9MB/s eta 0:00:01\r\u001b[K     |████████████▏                   | 348kB 4.9MB/s eta 0:00:01\r\u001b[K     |████████████▌                   | 358kB 4.9MB/s eta 0:00:01\r\u001b[K     |████████████▉                   | 368kB 4.9MB/s eta 0:00:01\r\u001b[K     |█████████████▏                  | 378kB 4.9MB/s eta 0:00:01\r\u001b[K     |█████████████▋                  | 389kB 4.9MB/s eta 0:00:01\r\u001b[K     |██████████████                  | 399kB 4.9MB/s eta 0:00:01\r\u001b[K     |██████████████▎                 | 409kB 4.9MB/s eta 0:00:01\r\u001b[K     |██████████████▋                 | 419kB 4.9MB/s eta 0:00:01\r\u001b[K     |███████████████                 | 430kB 4.9MB/s eta 0:00:01\r\u001b[K     |███████████████▍                | 440kB 4.9MB/s eta 0:00:01\r\u001b[K     |███████████████▊                | 450kB 4.9MB/s eta 0:00:01\r\u001b[K     |████████████████                | 460kB 4.9MB/s eta 0:00:01\r\u001b[K     |████████████████▍               | 471kB 4.9MB/s eta 0:00:01\r\u001b[K     |████████████████▊               | 481kB 4.9MB/s eta 0:00:01\r\u001b[K     |█████████████████▏              | 491kB 4.9MB/s eta 0:00:01\r\u001b[K     |█████████████████▌              | 501kB 4.9MB/s eta 0:00:01\r\u001b[K     |█████████████████▉              | 512kB 4.9MB/s eta 0:00:01\r\u001b[K     |██████████████████▏             | 522kB 4.9MB/s eta 0:00:01\r\u001b[K     |██████████████████▋             | 532kB 4.9MB/s eta 0:00:01\r\u001b[K     |███████████████████             | 542kB 4.9MB/s eta 0:00:01\r\u001b[K     |███████████████████▎            | 552kB 4.9MB/s eta 0:00:01\r\u001b[K     |███████████████████▋            | 563kB 4.9MB/s eta 0:00:01\r\u001b[K     |████████████████████            | 573kB 4.9MB/s eta 0:00:01\r\u001b[K     |████████████████████▍           | 583kB 4.9MB/s eta 0:00:01\r\u001b[K     |████████████████████▊           | 593kB 4.9MB/s eta 0:00:01\r\u001b[K     |█████████████████████           | 604kB 4.9MB/s eta 0:00:01\r\u001b[K     |█████████████████████▍          | 614kB 4.9MB/s eta 0:00:01\r\u001b[K     |█████████████████████▊          | 624kB 4.9MB/s eta 0:00:01\r\u001b[K     |██████████████████████▏         | 634kB 4.9MB/s eta 0:00:01\r\u001b[K     |██████████████████████▌         | 645kB 4.9MB/s eta 0:00:01\r\u001b[K     |██████████████████████▉         | 655kB 4.9MB/s eta 0:00:01\r\u001b[K     |███████████████████████▏        | 665kB 4.9MB/s eta 0:00:01\r\u001b[K     |███████████████████████▌        | 675kB 4.9MB/s eta 0:00:01\r\u001b[K     |████████████████████████        | 686kB 4.9MB/s eta 0:00:01\r\u001b[K     |████████████████████████▎       | 696kB 4.9MB/s eta 0:00:01\r\u001b[K     |████████████████████████▋       | 706kB 4.9MB/s eta 0:00:01\r\u001b[K     |█████████████████████████       | 716kB 4.9MB/s eta 0:00:01\r\u001b[K     |█████████████████████████▍      | 727kB 4.9MB/s eta 0:00:01\r\u001b[K     |█████████████████████████▊      | 737kB 4.9MB/s eta 0:00:01\r\u001b[K     |██████████████████████████      | 747kB 4.9MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▍     | 757kB 4.9MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▊     | 768kB 4.9MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▏    | 778kB 4.9MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▌    | 788kB 4.9MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▉    | 798kB 4.9MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▏   | 808kB 4.9MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▌   | 819kB 4.9MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████   | 829kB 4.9MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▎  | 839kB 4.9MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▋  | 849kB 4.9MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████  | 860kB 4.9MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▍ | 870kB 4.9MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▊ | 880kB 4.9MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████ | 890kB 4.9MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▍| 901kB 4.9MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▊| 911kB 4.9MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 921kB 4.9MB/s \n",
+            "\u001b[?25hRequirement already satisfied: fiona in /usr/local/lib/python3.6/dist-packages (from geopandas) (1.8.8)\n",
+            "Requirement already satisfied: shapely in /usr/local/lib/python3.6/dist-packages (from geopandas) (1.6.4.post2)\n",
+            "Requirement already satisfied: pandas>=0.23.0 in /usr/local/lib/python3.6/dist-packages (from geopandas) (0.24.2)\n",
+            "Collecting pyproj (from geopandas)\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/7a/b1/ab67ad924770e1c1432fa0953a665b8ea193b60c7494457b69da052d6e83/pyproj-2.4.0-cp36-cp36m-manylinux1_x86_64.whl (10.1MB)\n",
+            "\u001b[K     |████████████████████████████████| 10.1MB 46.3MB/s \n",
+            "\u001b[?25hRequirement already satisfied: attrs>=17 in /usr/local/lib/python3.6/dist-packages (from fiona->geopandas) (19.1.0)\n",
+            "Requirement already satisfied: cligj>=0.5 in /usr/local/lib/python3.6/dist-packages (from fiona->geopandas) (0.5.0)\n",
+            "Requirement already satisfied: six>=1.7 in /usr/local/lib/python3.6/dist-packages (from fiona->geopandas) (1.12.0)\n",
+            "Requirement already satisfied: click<8,>=4.0 in /usr/local/lib/python3.6/dist-packages (from fiona->geopandas) (7.0)\n",
+            "Requirement already satisfied: munch in /usr/local/lib/python3.6/dist-packages (from fiona->geopandas) (2.3.2)\n",
+            "Requirement already satisfied: click-plugins>=1.0 in /usr/local/lib/python3.6/dist-packages (from fiona->geopandas) (1.1.1)\n",
+            "Requirement already satisfied: python-dateutil>=2.5.0 in /usr/local/lib/python3.6/dist-packages (from pandas>=0.23.0->geopandas) (2.5.3)\n",
+            "Requirement already satisfied: pytz>=2011k in /usr/local/lib/python3.6/dist-packages (from pandas>=0.23.0->geopandas) (2018.9)\n",
+            "Requirement already satisfied: numpy>=1.12.0 in /usr/local/lib/python3.6/dist-packages (from pandas>=0.23.0->geopandas) (1.16.5)\n",
+            "Installing collected packages: pyproj, geopandas\n",
+            "Successfully installed geopandas-0.6.0 pyproj-2.4.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -109,7 +170,7 @@
       "metadata": {
         "id": "phiWezPIXgwY",
         "colab_type": "code",
-        "outputId": "bf2fd8ee-5e69-416c-c51d-cbf6510c7f59",
+        "outputId": "0b6d5771-8183-4426-83ae-d835a78ca7fa",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 411
@@ -127,7 +188,7 @@
         "print(temp_data.shape)\n",
         "temp_data.head(5)"
       ],
-      "execution_count": 41,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -374,7 +435,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 41
+          "execution_count": 7
         }
       ]
     },
@@ -430,7 +491,7 @@
       "metadata": {
         "id": "95329Bbiac-B",
         "colab_type": "code",
-        "outputId": "b8c832de-faec-47e2-e283-b36fc6cdc816",
+        "outputId": "91469dcd-c299-48d3-dbe5-31c512469231",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 394
@@ -445,7 +506,7 @@
         "sf_data['price_sf'] = sf_data['sale_price'] / sf_data['sf']\n",
         "sf_data.head(5)"
       ],
-      "execution_count": 44,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -697,7 +758,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 44
+          "execution_count": 10
         }
       ]
     },
@@ -716,7 +777,7 @@
       "metadata": {
         "id": "udbf0vBgz-P6",
         "colab_type": "code",
-        "outputId": "31c8900c-65d3-4015-c686-937bbd229ed7",
+        "outputId": "8bc66e65-1b50-4684-e1a9-207f662b9ab8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 224
@@ -775,7 +836,7 @@
         "\n",
         "neighborhood_data.head()"
       ],
-      "execution_count": 45,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -883,7 +944,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 45
+          "execution_count": 11
         }
       ]
     },
@@ -902,7 +963,7 @@
       "metadata": {
         "id": "0E4eFxilb0N3",
         "colab_type": "code",
-        "outputId": "ec40f910-c695-41ed-ae11-6b8c19d74153",
+        "outputId": "5c541748-78d1-4b0b-decc-7c287e13d1d1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -928,7 +989,7 @@
         "sf.sort_values(by=['subdist_no'])\n",
         "sf.head()"
       ],
-      "execution_count": 46,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1012,7 +1073,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 46
+          "execution_count": 12
         }
       ]
     },
@@ -1031,7 +1092,7 @@
       "metadata": {
         "id": "oDyuHAL19y5W",
         "colab_type": "code",
-        "outputId": "5fd26a5b-e5c1-4990-a605-2c8c399c0f3d",
+        "outputId": "5a7b9cdc-4a98-4afd-85ba-102d73d1c8d7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 235
@@ -1051,7 +1112,7 @@
         "format_df = pd.DataFrame(format_data, columns = ['field' , 'min_range', 'max_range' , 'format', 'verbage'])\n",
         "format_df.head(10)"
       ],
-      "execution_count": 47,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1150,7 +1211,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 47
+          "execution_count": 13
         }
       ]
     },
@@ -1265,6 +1326,7 @@
         "palette = palette[::-1]\n",
         "\n",
         "callback = CustomJS(args=dict(source=geosource), code=\"\"\"\n",
+        "    console.log(source)\n",
         "    x = cb_data.geometries['x']\n",
         "    y = cb_data.geometries['y']\n",
         "    console.log(x)\n",
@@ -1281,6 +1343,17 @@
         "#Add hover tool\n",
         "tap = TapTool(callback=callback)\n",
         "tap_neighborhood = TextInput(value = '', title = 'Neighborhood')\n",
+        "\n",
+        "def function_source(attr, old, new):\n",
+        "    try:\n",
+        "        selected_index = geosource.selected.indices[0]\n",
+        "        tap_neighborhood.value = str(selected_index) \n",
+        "    except IndexError:\n",
+        "        pass\n",
+        "\n",
+        "#tap_neighborhood.value = str(selected_index)     \n",
+        "\n",
+        "geosource.selected.on_change('indices', function_source)\n",
         "\n",
         "# Call the plotting function\n",
         "p = make_plot(input_field)\n",
